--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>WWW course</title>
+		<title>Облачные вычисления</title>
 
 		<link rel="stylesheet" href="./dist/reveal.css">
 		<link rel="stylesheet" href="./dist/theme/white.css" id="theme">
