--- a/course/intro/index.html
+++ b/course/intro/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>JavaScript</title>
+		<title>Облачные вычисления</title>
 
 		<link rel="stylesheet" href="../../dist/reveal.css">
 		<link rel="stylesheet" href="../..//dist/theme/white.css" id="theme">
