add lab 1 trg function
fix README for lab1

fix recurse in trg lab1

lab1 add api gateway

rename lab\function directory

remove lab\function directory

add pre

add pre

fix numbers

add tools (create users)

lab 2 init

fix account

fix account

fix numbers

add tools (create users)

lab 2 init

fix account

fix account

add lab 1 trg function

fix README for lab1

fix recurse in trg lab1

lab1 add api gateway

rename lab\function directory

remove lab\function directory

add pre

add pre

fix numbers

add tools (create users)

lab 2 init

fix account

fix account

fix numbers

add tools (create users)

lab 2 init

fix account

fix account

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -6,12 +6,14 @@
 </head>
 
 <body>
-    <form method="post" enctype="multipart/form-data" action="https://functions.yandexcloud.net/d4eglos00md3c62q858l">
+    <form method="post" enctype="multipart/form-data" action="https://">
         <p>Выберите файл для загрузки в Object Storage</p>
         <input type="file" name="fileToUpload">
         <p>Нажмите кнопку для загрузки файла на сервер</p>
         <input type="submit" value="Загрузка файла">
     </form>
 </body>
+<br>
+<a href="./list.html">Список загруженных файлов</a>
 
 </html>
